RESOLVED FIXED167510
Fix diagnostic logging in media code
https://bugs.webkit.org/show_bug.cgi?id=167510
Summary Fix diagnostic logging in media code
Chris Dumez
Reported 2017-01-27 09:57:54 PST
Fix diagnostic logging in media code. It should not use logDiagnosticMessageWithValue() with a non-numeric value.
Attachments
Patch (3.67 KB, patch)
2017-01-27 09:59 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-01-27 09:59:11 PST
WebKit Commit Bot
Comment 2 2017-01-27 12:37:14 PST
Comment on attachment 299939 [details] Patch Clearing flags on attachment: 299939 Committed r211298: <http://trac.webkit.org/changeset/211298>
WebKit Commit Bot
Comment 3 2017-01-27 12:37:18 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.