Fix diagnostic logging in media code https://bugs.webkit.org/show_bug.cgi?id=167510

Reviewed by Alex Christensen.

Fix diagnostic logging in media code. It should not use logDiagnosticMessageWithValue()
with a non-numeric value.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::loadResource):
(WebCore::HTMLMediaElement::updatePlayState):


Canonical link: https://commits.webkit.org/184548@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211298 268f45cc-cd09-0410-ab3c-d52691b4dbfc